[package]
name = "utp"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
dashmap = "6"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt", "sync"] }

[dev-dependencies]
futures-util = { version = "0.3" }
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread"] }
